--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,10 +43,10 @@ workflows:
     jobs:
       - test
       - build
-      - deploy
-        requires:
-          - test
-          - build
-        filters:
-          branches:
-            only: master
+      - deploy:
+          requires:
+            - test
+            - build
+          filters:
+            branches:
+              only: master
