--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,11 +34,11 @@ jobs:
           name: Build and push Docker image to quay.io
           command: |
             IMAGE_TAG="0.0.${CIRCLE_BUILD_NUM}"
-            docker tag cs_exporter ${QUAY_LOGIN}/cs_exporter:${IMAGE_TAG}
-            docker tag cs_exporter ${QUAY_LOGIN}/cs_exporter:latest
+            docker tag cs_exporter ${QUAY_ORG}/cs_exporter:${IMAGE_TAG}
+            docker tag cs_exporter ${QUAY_ORG}/cs_exporter:latest
             docker login -u ${QUAY_LOGIN} -p ${QUAY_PASSWORD} quay.io
-            docker push ${QUAY_LOGIN}/cs_exporter:${IMAGE_TAG}
-            docker push ${QUAY_LOGIN}/cs_exporter:latest
+            docker push ${QUAY_ORG}/cs_exporter:${IMAGE_TAG}
+            docker push ${QUAY_ORG}/cs_exporter:latest
 
 workflows:
   version: 2
