--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
             IMAGE_TAG="0.0.${CIRCLE_BUILD_NUM}"
             docker tag cs_exporter ${QUAY_ORG}/cs_exporter:${IMAGE_TAG}
             docker tag cs_exporter ${QUAY_ORG}/cs_exporter:latest
-            docker login -u ${QUAY_LOGIN} -p ${QUAY_PASSWORD} quay.io
+            echo ${QUAY_PASSWORD} | docker login -u ${QUAY_LOGIN} --password-stdin quay.io
             docker push ${QUAY_ORG}/cs_exporter:${IMAGE_TAG}
             docker push ${QUAY_ORG}/cs_exporter:latest
 
