--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,8 @@ jobs:
           name: Build and push Docker image to quay.io
           command: |
             IMAGE_TAG="0.0.${CIRCLE_BUILD_NUM}"
-            docker tag cs_exporter ${QUAY_ORG}/cs_exporter:${IMAGE_TAG}
-            docker tag cs_exporter ${QUAY_ORG}/cs_exporter:latest
+            docker tag cs_exporter quay.io/${QUAY_ORG}/cs_exporter:${IMAGE_TAG}
+            docker tag cs_exporter quay.io/${QUAY_ORG}/cs_exporter:latest
             echo ${QUAY_PASSWORD} | docker login -u ${QUAY_LOGIN} --password-stdin quay.io
             docker push quay.io/${QUAY_ORG}/cs_exporter:${IMAGE_TAG}
             docker push quay.io/${QUAY_ORG}/cs_exporter:latest
