* minor refactoring * local development environment * updated documentation

--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,6 +1,6 @@
 # my global config
 global:
-  scrape_interval:     15s # By default, scrape targets every 15 seconds.
+  scrape_interval:     5s # By default, scrape targets every 15 seconds.
   evaluation_interval: 15s # By default, scrape targets every 15 seconds.
 
 # A scrape configuration containing exactly one endpoint to scrape:
@@ -9,17 +9,26 @@ scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
 
   - job_name: 'prometheus'
-
     # Override the global default and scrape targets from this job every 5 seconds.
-    scrape_interval: 5s
-
+    scrape_interval: 1s
     static_configs:
-         - targets: ['localhost:9090']
+      - targets: ['localhost:9090']
 
 
   - job_name: 'cs-exporter'
-
     # Override the global default and scrape targets from this job every 5 seconds.
     static_configs:
-         - targets: ['exporter:8080']
+      - targets: ['exporter:9259']
 
+  - job_name: 'testservice'
+    metrics_path: /probe
+    # Override the global default and scrape targets from this job every 5 seconds.
+    static_configs:
+      - targets: ['http://testservice:8081']
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: exporter:9259  # The cs exporter's real hostname:port.
