--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,7 @@ services:
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
-      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
-      - '--web.console.templates=/usr/share/prometheus/consoles'
+      - '--web.enable-lifecycle'
     ports:
       - 9090:9090
     links:
@@ -21,21 +20,18 @@ services:
     build:
       context: ./
       dockerfile: ./docker/exporter/Dockerfile
-    environment:
-      - "CS_SERVER=http://testserver:8081"
     ports:
-      - "8080:8080"
+      - 9259:9259
     links:
       - testserver
 
-  testserver:
+  testservice:
     build:
       context: ./docker/testservice
     expose:
       - 8081
     ports:
-      - 8081:8081 
-
+      - 8081:8081
 
 volumes:
-    prometheus_data: {}
+  prometheus_data: {}
